--- a/css/login.css
+++ b/css/login.css
@@ -1,19 +1,12 @@
-.nav {
-    background-image: url('../images/Lobby/平台svg/lobby_top_bar.svg');
+.wrapper {
+    background-image: url('../../../public/images/Lobby/平台svg/loginpage_bg.svg');
     background-repeat: no-repeat;
-    background-position: center bottom 12%;
-    background-size: 200%;
-    height: .77rem;
+    background-position: top center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    padding: calc(.12rem + 3vh);
 }
-.logo {
-    height: .5rem;
-    width: auto;
-}
-.backBtn {
-    height: .7rem;
-    width: .7rem;
-}
+
