--- a/css/admin.css
+++ b/css/admin.css
@@ -108,3 +108,10 @@
 .total__price {
     font-size: calc(.1rem + 1vh);
 }
+
+.menu__betSearch:hover, .menu__accountList:hover {
+    filter: brightness(1.3);
+}
+.backBtn:hover, .content__searchbtn:hover, .content__betList2btn:hover, .content__betList1btn:hover {
+    filter: brightness(1.2);
+}
